--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "puppeteer": "^23.11.1"
+    "https": "^1.0.0"
   }
 }
